<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/text_home" />
        <item
            android:id="@+id/nav_contact_details"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/text_contact_details" />
        <item
            android:id="@+id/nav_payment_options"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/text_payment_options" />
        <item
            android:id="@+id/nav_order_history"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/text_order_history" />
        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/text_change_password" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/text_about_feedback" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/text_share" />
        <item
            android:id="@+id/nav_rateapp"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/text_rate_app" />
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/text_signout" />
    </group>

</menu>
