<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/paymentRadioGroup"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:checkedButton="@+id/cashondelivery" >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cashondelivery"
            android:textSize="18sp"
            android:text="@string/text_cash_on_delivery" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cardondelivery"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:text="@string/text_card_on_delivery" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/paytmondelivery"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:text="@string/text_paytm_on_delivery" />
    </RadioGroup>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:textAllCaps="false"
        android:padding="12dp"
        android:layout_alignParentBottom="true"
        android:text="Save"/>

</RelativeLayout>