<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Feedback"
            android:gravity="center"
            android:textSize="20sp"/>

            <EditText android:id="@+id/input_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="6"
                android:maxLines="8"
                android:minLines="5"
                android:scrollbars="vertical"
                android:inputType="text|textMultiLine"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/text_provide_feedback" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="bottom"
            android:textAllCaps="false"
            android:padding="12dp"
            android:text="@string/text_reset_password"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="About Us"
            android:gravity="center"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_about_us"
            android:textSize="16sp"/>
    </LinearLayout>
</RelativeLayout>